# erictransformer

./: .gitignore  CONTRIBUTORS.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: site.yml
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: call-args.md  eval-args.md  index.md  push.md  save.md  tokenize.md  train-args.md
erictransformer/: __init__.py  eric_transformer.py
erictransformer/args/: __init__.py  eric_args.py
erictransformer/eric_tasks/: __init__.py  eric_chat.py  eric_chat_mlx.py  eric_generation.py  eric_text_classification.py  eric_text_to_text.py
erictransformer/eric_tracker/: __init__.py  eric_tracker.py  save_plot.py
erictransformer/eval_models/: __init__.py  eval_model.py
erictransformer/exceptions/: __init__.py  eric_exceptions.py
erictransformer/loops/: __init__.py  eval_loop.py  train_loop.py
erictransformer/utils/: __init__.py
erictransformer/validator/: __init__.py  eric_validator.py
examples/fine_tuning/: README.md
examples/pretraining/: README.md
tests/: get_test_models.py
tests/chat/: __init__.py  test_detok.py  test_eval.py  test_inf.py  test_save.py  test_tok_length.py  test_train.py
tests/chat_mlx/: __init__.py  test_inf.py
tests/eric_search/: test_eric_search.py
tests/functions/: __init__.py  detok.py  eval.py  inf.py  save.py  tok.py  tok_length.py  train.py
tests/tc/: __init__.py  test_detok.py  test_eval.py  test_inf.py  test_labels.py  test_save.py  test_tok_length.py  test_train.py
tests/tt/: __init__.py  test_detok.py  test_eval.py  test_inf.py  test_save.py  test_tok_length.py  test_train.py
(+90 files in other folders)
